fix: image/figure scaling and position on mobile

--- a/themes/m10d/assets/css/pages/_post.scss
+++ b/themes/m10d/assets/css/pages/_post.scss
@@ -62,6 +62,15 @@
     padding: 0;
   }
 
+  >, p, figure {
+    img, svg {
+      max-width: 100%;
+      overflow-x: auto;
+      margin: 0 auto;
+      display: block;
+    }
+  }
+
   blockquote {
     background: $darkest-color;
     border-left: .4em solid rgba($primary-color, .8);
@@ -73,16 +82,14 @@
     }
   }
 
-  // wrap that allows images to keep their original size on smaller screens
-  >.img {
-    max-width: 100%;
-    overflow-x: auto;
-  }
+  figure {
+    display: block;
 
-  // force scale images directly in the post body to prevent breaking the layout
-  >img,
-  >svg {
-    max-width: 100%;
+    figcaption {
+      font-size: 0.9em;
+      font-style: italic;
+      text-align: center;
+    }
   }
 
   a > h1,
